<resources>
    <string name="app_name">Clon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="danya_selskiy">Danya Selskiy</string>
    <string name="set">В сети</string>
    <string name="settings_text_account">Аккаунт</string>
    <string name="settings_default_number">+79523939888</string>
    <string name="Settings_label_phone_number">Нажмите что бы изменить номер телефона</string>
    <string name="settings_label_login">Имя пользователь</string>
    <string name="settings_dafault_bio">О себе</string>
    <string name="settings_login_bio">Напишите немного о себе</string>
</resources>